--- a/ModuleThi/ModuleThi.csproj
+++ b/ModuleThi/ModuleThi.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ModuleSoanDe\ModuleSoanDe.csproj" />
+  </ItemGroup>
 
 </Project>
