--- a/ModuleSoanDe/ModuleSoanDe.csproj
+++ b/ModuleSoanDe/ModuleSoanDe.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Update="FormCauHoi.cs" />
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
